mini editor responsive and alignment fixed

--- a/css/personalise.css
+++ b/css/personalise.css
@@ -26,18 +26,17 @@
   /* align-items: center; */
   /* justify-content: center; */
   gap: 20px;
-  height: 92%;
-  /* height: 100%; */
-  padding: 60px 100px 30px 100px;
+  height: 100%;
+  padding: 60px 100px 60px 100px;
 }
 .personalise-3d-box {
   /* padding: 100px; */
   background-color: #f2f6fe !important;
-  height: 100vh;
+  height: calc(100vh - 95px);
   width: 100%;
 }
 .personalise-template-list-cont {
-  width: 35%;
+  width: 27.5%;
   /* height: 100%; */
   /* border: 1px solid red; */
   overflow: auto;
@@ -61,7 +60,7 @@
 }
 .personalise-all-btn-details-cont {
   width: 100%;
-  height: 40%;
+  /* height: 40%; */
   display: flex;
   /* display: none; */
   flex-direction: column;
@@ -72,6 +71,7 @@
   padding: 0;
   color: #0c0b18;
   text-transform: capitalize;
+  line-height: normal;
 }
 .personalise-product-name-text {
   text-transform: capitalize !important;
@@ -85,6 +85,7 @@
   height: 100%;
   cursor: pointer;
   position: relative;
+  line-height: normal;
 }
 .template-image-box.active {
   border: 2px solid #00a3ff;
@@ -127,7 +128,7 @@
 .mini-edit-3d-cont {
   border-radius: 8px;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   position: relative;
   /* border: 1px solid red; */
   /* height: 70%; */
@@ -146,7 +147,7 @@
 }
 .personalise-icon-cont {
   position: absolute;
-  top: 20px;
+  bottom: 20px;
   right: 20px;
   display: flex;
   align-items: center;
@@ -237,7 +238,7 @@
 }
 
 .personalise-btn-mini {
-  width: 320px;
+  width: 275px;
   border-radius: 8px;
   height: 45px;
   font-size: 18px;
@@ -247,6 +248,7 @@
   color: #fff;
   cursor: pointer;
   transition: all 0.3s;
+  margin-right: 30px;
 }
 
 .personalise-btn-mini:hover {
@@ -259,7 +261,7 @@
   background-color: #0188d4 !important;
 }
 .edit-design-btn-mini {
-  width: 320px;
+  width: 275px;
   border-radius: 8px;
   height: 45px;
   font-size: 18px;
@@ -558,4 +560,12 @@
   justify-content: space-between;
   padding: 20px 100px;
   width: 100%;
+}
+
+.personalise-btns-container {
+  display: flex;
+}
+
+p.personalise-product-desc-text {
+  visibility: hidden;
 }
